<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.segihovav.mylinks_android.SettingsActivity"
    >

    <TextView
         android:id="@+id/TitleBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:height="50dp"
         android:background="@color/colorPrimary"
         android:textColor="@android:color/white"
         android:textSize="22sp"
         android:theme="@style/AppTheme.AppBarOverlay"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
    />

    <TextView
         android:id="@+id/AddLinkURLsLbl"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="76dp"
         android:text="@string/myLinksURLs"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/TitleBar"
    />

    <Button
         android:id="@+id/addURLButton"
         android:layout_width="270dp"
         android:layout_height="wrap_content"
         android:backgroundTint="@android:color/holo_green_light"
         android:text="@string/addURL"
         app:layout_constraintTop_toBottomOf="@id/TitleBar"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginTop="0dp"
         android:onClick="manageURLsClick"
    />

    <Spinner
         android:id="@+id/LinkURLSpinner"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="120dp"
         android:layout_marginTop="56dp"
         android:background="@android:drawable/btn_dropdown"
         android:spinnerMode="dropdown"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/TitleBar" />

    <com.google.android.material.switchmaterial.SwitchMaterial
         android:id="@+id/switchDarkMode"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/darkMode"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/LinkURLSpinner"
         android:layout_marginTop="100dp"
         android:switchPadding = "15dp"
         android:onClick="darkModeClick"/>

    <Button
         android:id="@+id/saveButton"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:backgroundTint="@android:color/holo_blue_dark"
         android:onClick="saveClick"
         android:text="@string/save"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@id/goBackButton"
         android:layout_marginStart="25dp"
         android:layout_marginBottom="20dp"
    />

    <Button
         android:id="@+id/goBackButton"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:backgroundTint="@android:color/darker_gray"
         android:onClick="goBackClick"
         android:text="@string/goBack"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginBottom="20dp"
    />
</androidx.constraintlayout.widget.ConstraintLayout>
