<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/manageURLLayout"
    tools:context="com.segihovav.mylinks_android.ManageInstanceLinks">

    <TextView
        android:id="@+id/TitleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="50dp"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/addURL"
    />

    <TextView
        android:id="@+id/AddNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/TitleBar"
    />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/AddName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="@id/AddURLLabel"
        app:layout_constraintTop_toBottomOf="@id/TitleBar"
        android:layout_marginStart="120dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:inputType="text|textUri"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/AddURLLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/url"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/AddNameLabel"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/AddURL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="@id/AddURLLabel"
        app:layout_constraintTop_toBottomOf="@id/AddNameLabel"
        android:layout_marginStart="120dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:inputType="text|textUri"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/AddMyLinkURL"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_blue_light"
        android:text="@string/addMyLinksURL"
        app:layout_constraintTop_toBottomOf="@id/AddURLLabel"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        android:onClick="addURLClick"
    />

    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/URLList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:clipToPadding="true"
         android:orientation="horizontal"
         android:overScrollMode="never"
         app:fastScrollEnabled="true"
         app:fastScrollHorizontalThumbDrawable="@drawable/thumb_drawable"
         app:fastScrollHorizontalTrackDrawable="@drawable/line_drawable"
         app:fastScrollVerticalThumbDrawable="@drawable/thumb_drawable"
         app:fastScrollVerticalTrackDrawable="@drawable/line_drawable"
         app:layout_constraintTop_toBottomOf="@id/AddMyLinkURL"
         app:layout_constraintLeft_toLeftOf="parent"
         android:scrollbars="vertical"
    />

    <Button
        android:id="@+id/goBackButton"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/goBack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="20dp"
        android:onClick="goBackClick"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
