<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.segihovav.mylinks_android.EditActivity"
     >

     <TextView
          android:id="@+id/TitleBar"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:height="50dp"
          android:background="@color/colorPrimary"
          android:textColor="@android:color/white"
          android:textSize="22sp"
          android:theme="@style/AppTheme.AppBarOverlay"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintTop_toTopOf="parent"
      />

    <!--<ImageView
        android:id="@+id/deleteLink"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="350dp"
        android:clickable="true"
        android:focusable = "false"
        android:onClick="deleteLinkClick"
        android:src="@drawable/delete" />-->

     <TextView
          android:id="@+id/NameLabel"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="25dp"
          app:layout_constraintLeft_toLeftOf="parent"
          app:layout_constraintTop_toBottomOf="@id/TitleBar"
          android:text="@string/name"
     />

     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/Name"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         app:layout_constraintRight_toRightOf="@id/NameLabel"
         app:layout_constraintTop_toBottomOf="@id/TitleBar"
         android:layout_marginStart="70dp"
     >

     <com.google.android.material.textfield.TextInputEditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:ellipsize="end"
          android:inputType="text"
          android:maxLines="1" />
     </com.google.android.material.textfield.TextInputLayout>

    <TextView
         android:id="@+id/URLLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="75dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/NameLabel"
         android:text="@string/url"
    />

    <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/URL"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         app:layout_constraintRight_toRightOf="@id/URLLabel"
         app:layout_constraintTop_toBottomOf="@id/Name"
         android:layout_marginTop="30dp"
         android:layout_marginStart="70dp"
    >

    <com.google.android.material.textfield.TextInputEditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ellipsize="end"
         android:inputType="text|textUri"
         android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
         android:id="@+id/TypeLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="75dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/URLLabel"
         android:text="@string/type"
    />

  <Spinner
    android:id="@+id/TypeID"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="70dp"
    android:layout_marginTop="56dp"
    android:background="@android:drawable/btn_dropdown"
    android:spinnerMode="dropdown"
    app:layout_constraintLeft_toRightOf="@id/TypeLabel"
    app:layout_constraintTop_toBottomOf="@id/URL" />

  <Button
         android:id="@+id/saveButton"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:backgroundTint="@android:color/holo_blue_dark"
         android:text="@string/save"
         android:onClick="saveClick"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toRightOf="@id/goBackButton"
         android:layout_marginStart="25dp"
         android:layout_marginBottom="20dp"
    />

    <Button
        android:id="@+id/goBackButton"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/darker_gray"
        android:onClick="goBackClick"
        android:text="@string/goBack"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="20dp"
    />
</androidx.constraintlayout.widget.ConstraintLayout>
